--- a/MassTester.Runner/MassTester.Runner.csproj
+++ b/MassTester.Runner/MassTester.Runner.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,10 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arguments.cs" />
+    <Compile Include="AppConfig.cs" />
+    <Compile Include="Utils\Arguments.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestProcess.cs" />
+    <Compile Include="RunnerProcess.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
